--- a/CuoiKyOOP/QLHS/pom.xml
+++ b/CuoiKyOOP/QLHS/pom.xml
@@ -118,6 +118,7 @@
       <artifactId>gson</artifactId>
       <version>3.2.1</version>
     </dependency>
+
     <dependency>
       <groupId>org.apache.poi</groupId>
       <artifactId>poi</artifactId>
@@ -132,6 +133,19 @@
       <groupId>org.apache.commons</groupId>
       <artifactId>commons-collections4</artifactId>
       <version>4.4</version>
+    </dependency>
+    <!-- Log4j2 API -->
+    <dependency>
+      <groupId>org.apache.logging.log4j</groupId>
+      <artifactId>log4j-api</artifactId>
+      <version>2.24.0</version>
+    </dependency>
+
+    <!-- Log4j2 Core -->
+    <dependency>
+      <groupId>org.apache.logging.log4j</groupId>
+      <artifactId>log4j-core</artifactId>
+      <version>2.24.0</version> <!-- Use the latest version -->
     </dependency>
   </dependencies>
 
