--- a/CuoiKyOOP/QLHS/pom.xml
+++ b/CuoiKyOOP/QLHS/pom.xml
@@ -117,7 +117,7 @@
     <dependency>
       <groupId>com.google.code.gson</groupId>
       <artifactId>gson</artifactId>
-      <version>3.2.1</version>
+      <version>2.8.9</version>
     </dependency>
 
     <dependency>
@@ -162,6 +162,12 @@
       <groupId>org.apache.poi</groupId>
       <artifactId>poi-ooxml-schemas</artifactId>
       <version>5.2.3</version> <!-- Hoặc phiên bản mới nhất -->
+    </dependency>
+    <!-- https://mvnrepository.com/artifact/mysql/mysql-connector-java -->
+    <dependency>
+      <groupId>com.mysql</groupId>
+      <artifactId>mysql-connector-j</artifactId>
+      <version>8.0.31</version>
     </dependency>
 
     <!-- XML Beans (required for POI OOXML) -->
