--- a/CuoiKyOOP/QLHS/src/main/resources/config.properties
+++ b/CuoiKyOOP/QLHS/src/main/resources/config.properties
@@ -1,10 +1,9 @@
 endOfSchoolYear=2024-08-04
-#db.url = jdbc:mysql://localhost:3306/csdl_qlhs
 
-db.url = jdbc:mysql://avnadmin:AVNS_PHZlgnTHSk-WHXCV_x6@csdl-qlhs-anhphap2412.i.aivencloud.com:15335/qlhs_cloud
-#db.user=root
-db.user=avnadmin
-
-
-#db.password= 123321
-db.password= AVNS_PHZlgnTHSk-WHXCV_x6
+db.url = jdbc:mysql://localhost:3306/csdl_qlhs
+#db.url = jdbc:mysql://avnadmin:AVNS_PHZlgnTHSk-WHXCV_x6@csdl-qlhs-anhphap2412.i.aivencloud.com:15335/qlhs_cloud
+db.user=root
+#db.user=avnadmin
+#
+db.password= 123321
+#db.password= AVNS_PHZlgnTHSk-WHXCV_x6
