fix tim kiem va kiem tra dieu kien

--- a/CuoiKyOOP/QLHS/src/main/resources/config.properties
+++ b/CuoiKyOOP/QLHS/src/main/resources/config.properties
@@ -1,21 +1,9 @@
 endOfSchoolYear=2024-08-04
-<<<<<<< HEAD
-#db.url = jdbc:mysql://localhost:3306/csdl_qlhs
-
-db.url = jdbc:mysql://avnadmin:AVNS_PHZlgnTHSk-WHXCV_x6@csdl-qlhs-anhphap2412.i.aivencloud.com:15335/qlhs_cloud
-#db.user=root
-db.user=avnadmin
-
-
-#db.password= 123321
-db.password= AVNS_PHZlgnTHSk-WHXCV_x6
-=======
 
 db.url = jdbc:mysql://localhost:3306/csdl_qlhs
-#db.url = jdbc:mysql://avnadmin:AVNS_PHZlgnTHSk-WHXCV_x6@csdl-qlhs-anhphap2412.i.aivencloud.com:15335/qlhs_cloud
 db.user=root
-#db.user=avnadmin
-#
 db.password= 123321
+
+#db.url = jdbc:mysql://avnadmin:AVNS_PHZlgnTHSk-WHXCV_x6@csdl-qlhs-anhphap2412.i.aivencloud.com:15335/csdl_qlhs
+#db.user=avnadmin
 #db.password= AVNS_PHZlgnTHSk-WHXCV_x6
->>>>>>> fefba7c039297508cd4984da9c42fb5f8eafe9d3
