--- a/CuoiKyOOP/QLHS/src/main/resources/config.properties
+++ b/CuoiKyOOP/QLHS/src/main/resources/config.properties
@@ -1,9 +1,9 @@
 endOfSchoolYear=2024-08-04
+#
+#db.url = jdbc:mysql://localhost:3306/csdl_qlhs
+#db.user=root
+#db.password= 123321
 
-db.url = jdbc:mysql://localhost:3306/csdl_qlhs
-db.user=root
-db.password= 123321
-
-#db.url = jdbc:mysql://avnadmin:AVNS_PHZlgnTHSk-WHXCV_x6@csdl-qlhs-anhphap2412.i.aivencloud.com:15335/csdl_qlhs
-#db.user=avnadmin
-#db.password= AVNS_PHZlgnTHSk-WHXCV_x6
+db.url = jdbc:mysql://avnadmin:AVNS_PHZlgnTHSk-WHXCV_x6@csdl-qlhs-anhphap2412.i.aivencloud.com:15335/csdl_qlhs
+db.user=avnadmin
+db.password= AVNS_PHZlgnTHSk-WHXCV_x6
